document_request_electronic_signature: Manage dynamic set of documents (#3520)
Fix #14121

--- a/modules/document_request_electronic_signature/locale/fr.po
+++ b/modules/document_request_electronic_signature/locale/fr.po
@@ -132,6 +132,14 @@ msgctxt "field:document.signature.credential,xml_id:"
 msgid "XML Id"
 msgstr "XML Id"
 
+msgctxt "help:document.description,sub_documents:"
+msgid ""
+"Ordered set of documents that will be merged before signing if they are "
+"individualy requested. Those not requested will be ignored"
+msgstr ""
+"Liasse ordonnée des documents qui seront fusionnés avant la signature si ils "
+"sont individuelement requis. Ceux non requis seront ignorés"
+
 msgctxt "help:document.description.signature.coordinate,signature_page:"
 msgid ""
 "The page on which the signature must appear. 1 is the first and -1 is the "
