--- a/modules/document_request_electronic_signature/doc/en/CHANGELOG
+++ b/modules/document_request_electronic_signature/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* FEA#14121 Manage dynamic set of documents by only merging documents that are requested
 * OTH#0000 Check pdf are real pdf documents before merging
 * OTH#0000 Set reception date when receiving electronic signature callback
 * BUG#13387 Fix protected documents research when calculating required documents with electronic signature
