--- a/modules/document_request_electronic_signature/doc/fr/CHANGELOG
+++ b/modules/document_request_electronic_signature/doc/fr/CHANGELOG
@@ -1,3 +1,4 @@
+* FEA#14121 Gestion des liasses dynamiques en ne fusionnant que les documents requis. Il est donc possible d'ajouter n documents dans la définition d'une liasse mais ils ne seront ajoutés que si ces documents sont réellement requis pour le dossier en cours.
 * OTH#0000 Vérification que les pdfs sont conformes avant de les fusionner
 * OTH#0000 Positionnement de la date de réception lors du call back de la signature électronique
 * BUG#13387 Correctif sur la recherche des documents protégés lors du calcul des documents avec signature electronique
