--- a/modules/claim_eckert/doc/en/CHANGELOG
+++ b/modules/claim_eckert/doc/en/CHANGELOG
@@ -1,3 +1,5 @@
+* OTH#00000 Add no update on note type "Eckert" creation
+
 Version 2.6 - 2019-10-11
 Version 2.4 - 2019-04-12
 Version 2.2 - 2018-10-12
