--- a/modules/claim_eckert/doc/fr/CHANGELOG
+++ b/modules/claim_eckert/doc/fr/CHANGELOG
@@ -1,3 +1,5 @@
+* OTH#00000 Ajout de no update sur la création du type de note "Eckert"
+
 Version 2.6 - 2019-10-11
 Version 2.4 - 2019-04-12
 Version 2.2 - 2018-10-12
