--- a/modules/contract_insurance/doc/en/CHANGELOG
+++ b/modules/contract_insurance/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* BUG#14139 Return chosen package per covered in simulate API
 * OTH#00000 Take into account the default value of auto_remove_not_subscriptable in the tests
 * FEA#13843 Add covereds information to simulate API
 * FEA#13568 Update fields in party GDPR extraction
