party_birth_data: Add initialization of birth_zip_and_city function f… (#3509)
* party_birth_data:  Allow initialization of birth_zip_and_city function field even if birth city is not defined

--- a/modules/party_birth_data/doc/en/CHANGELOG
+++ b/modules/party_birth_data/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* BUG#14066 Allow initialization of birth_zip_and_city function field even if birth city is not defined
 * BUG#13466 Not reseting birth zip and city when the SSN is wrong or does not correspond to any INSEE code
 
 Version 2.6 - 2019-10-11
