--- a/modules/party_birth_data/doc/fr/CHANGELOG
+++ b/modules/party_birth_data/doc/fr/CHANGELOG
@@ -1,3 +1,4 @@
+* BUG#14066 Initialiser la commune de naissance lorsque le champ ville de naissance n'est pas défini
 * BUG#13466 Ne pas réinitialiser la commune de naissance lorsque le NIR est faux ou ne correspondant pas un un code insee
 
 Version 2.6 - 2019-10-11
