--- a/modules/endorsement_party/doc/en/CHANGELOG
+++ b/modules/endorsement_party/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* BUG#13561 Hide party_id in address endorsement process
 * BUG#13825 Allow to display only party endorsement when starting an endorsement on a party
 * BUG#13904 Read error on json export of an endorsement deleting a relation
 * FEA#12673 Manage death date on person record
