--- a/modules/claim_salary_fr/doc/en/CHANGELOG
+++ b/modules/claim_salary_fr/doc/en/CHANGELOG
@@ -1,3 +1,5 @@
+* FEA#13681 Fix agirc and arrco dates / add new agirc-arrco table
+
 Version 2.6 - 2019-10-11
 * BUG#12308 Fix PMSS calculation for 'last year' salary mode
 * BUG#12134 Fix prorata calculation for non monthly salary modes
