migrator_party: Refactor of query_data method of migrator.party.relation (#3512)

--- a/modules/migrator_party/doc/fr/CHANGELOG
+++ b/modules/migrator_party/doc/fr/CHANGELOG
@@ -1,5 +1,5 @@
-* FEA#13990 Refactorisation de la méthode migrate du migrator des données de
-contact
+* BUG#14075 Réfactorisation de la méthode query_data du migrator.party.relation
+* FEA#13990 Refactorisation de la méthode migrate du migrator des données de contact
 * BUG#13951 Correctif de la clause where dans la méthode run_query de migrator address
 * FEA#13902 Ajout de la migration des champs de naissance
 * FIX#00000 Correction de la migration des adresses: toutes les adresses sont importées pour chaque job
