--- a/modules/migrator_party/doc/en/CHANGELOG
+++ b/modules/migrator_party/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* BUG#14075 Refactor of query_data method of migrator.party.relation
 * FEA#13990 Refactoring of migrate method in contact migrator
 * BUG#13951 Fix where clause in run_query method of migrator.address
 * FEA#13902 Add migration of birth data fields
