migrator_party_employment: improve init cache method (#3391)

--- a/modules/migrator_party_employment/doc/fr/CHANGELOG
+++ b/modules/migrator_party_employment/doc/fr/CHANGELOG
@@ -1,2 +1,3 @@
+* FEA#13666 Amélioration de la méthode init cache
 * FEA#14051 Ajout de l'option delete dans le code de la méthode migrate
 * FEA#12781 Création de module
