--- a/modules/commission_wholesale/doc/en/CHANGELOG
+++ b/modules/commission_wholesale/doc/en/CHANGELOG
@@ -1,3 +1,5 @@
+* BUG#14166 Handle wholesale broker notice with the new slip mechanism
+
 Version 2.6 - 2019-10-11
 Version 2.4 - 2019-04-12
 Version 2.2 - 2018-10-12
