--- a/modules/contract/locale/fr.po
+++ b/modules/contract/locale/fr.po
@@ -174,6 +174,10 @@ msgctxt "field:contract,subscriber:"
 msgid "Subscriber"
 msgstr "Souscripteur"
 
+msgctxt "field:contract,subscriber_extra_data:"
+msgid "Subscriber Extra Data"
+msgstr "Données complémentaires du souscripteur"
+
 msgctxt "field:contract,subscriber_kind:"
 msgid "Subscriber Kind"
 msgstr "Type de souscripteur"
@@ -1239,7 +1243,8 @@ msgid ""
 "If set, you will be allowed to cover an element that was already covered "
 "with the same options at the same date on different contracts"
 msgstr ""
-"Si coché, un même élément pourra être couvert plusieurs fois par la même garantie à une même date"
+"Si coché, un même élément pourra être couvert plusieurs fois par la même "
+"garantie à une même date"
 
 msgctxt "help:offered.option.description.ending_rule,automatic_sub_status:"
 msgid ""
