report_engine_email: Send empty paper form associated to request line by e-mail (#3519)
Fix #14120

--- a/modules/contract_insurance/locale/fr.po
+++ b/modules/contract_insurance/locale/fr.po
@@ -956,6 +956,10 @@ msgctxt "model:ir.action,name:act_contract_activation_history_relate_form"
 msgid "Activation History"
 msgstr "Historique d'activation"
 
+msgctxt "model:ir.action,name:act_covered_element_relate_form"
+msgid "Covered Elements"
+msgstr "Risques Couverts"
+
 msgctxt "model:ir.action,name:act_create_extra_premium"
 msgid "Create Extra Premium"
 msgstr "Créer une surprime"
