contract_insurance_health_fr: Fix rsi periods invoice computation (#3548)
Fix #14196

--- a/modules/contract_insurance_health_fr/doc/fr/CHANGELOG
+++ b/modules/contract_insurance_health_fr/doc/fr/CHANGELOG
@@ -1,3 +1,5 @@
+* BUG#14196 Correctif sur le calcul des périodes RSI
+
 Version 2.6 - 2019-10-11
 * BUG#12092 Refonte de l'écran tiers en santé
 * BUG#11918 Autoriser l'édition des tiers même s'il est ayant droit
