--- a/modules/contract_insurance_health_fr/doc/en/CHANGELOG
+++ b/modules/contract_insurance_health_fr/doc/en/CHANGELOG
@@ -1,3 +1,5 @@
+* BUG#14196 Fix on RSI periods computation
+
 Version 2.6 - 2019-10-11
 * BUG#12092 Review party screen
 * BUG#11918 Allow party edition when the party is social security dependant
