--- a/modules/coog_core/doc/en/CHANGELOG
+++ b/modules/coog_core/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* FEA#14156 Add azure active directory to identity
 * BUG#13632 Add field depends for on_change method
 * OTH#00000 Add export_light for groups in Role class
 * FEA#14147 Make user_role inherit of CodedMixin
