--- a/modules/bank_cog/doc/fr/CHANGELOG
+++ b/modules/bank_cog/doc/fr/CHANGELOG
@@ -1,3 +1,4 @@
+* FEA#14059 Ajout d'un index sur le champ number compact du modèle bank.account.number
 * FEA#13568 Mise à jour des champs dans l'extraction RGPD d'un tiers
 * FEA#13658 Import des banques par batch
 * OTH#00000 Correction d'une régression suite ) #13206
