--- a/modules/contract_insurance_invoice/doc/en/CHANGELOG
+++ b/modules/contract_insurance_invoice/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* BUG#14231 Fix crash when the billing mode is manual at payments fail integration with a present again after action
 * OTH#00000 Fix allowed debit days for the tests
 * FEA#14026 Add option to return a premium summary of the first invoice only in simulate API
 * BUG#13798 Check whether the direct debit day is allowed
