--- a/modules/contract_premium_modification/doc/en/CHANGELOG
+++ b/modules/contract_premium_modification/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* OTH#00000 Fix total tax amount in simulate API
 * BUG#14161 Handle automatic discounts in simulate API
 * OTH#00000 Handle commercial discount on contract option
 * FEA#14026 Add option to return a premium summary of the first invoice only in simulate API
