--- a/modules/contract_coverage_amount/doc/fr/CHANGELOG
+++ b/modules/contract_coverage_amount/doc/fr/CHANGELOG
@@ -1,3 +1,4 @@
+* FEA#13644 Calcul du montant de couverture et retour dans l'API
 * OTH#00000 Résolution des tests journaliers
 
 Version 2.6 - 2019-10-11
