--- a/modules/contract_coverage_amount/locale/fr.po
+++ b/modules/contract_coverage_amount/locale/fr.po
@@ -7,17 +7,26 @@ msgid "Coverage Amount"
 msgstr "Montant de Couverture"
 
 msgctxt ""
+"field:contract.manage_options.option_displayer,coverage_amount_label:"
+msgid "Coverage Amount Label"
+msgstr "Libellé du Montant de Couverture"
+
+msgctxt "field:contract.manage_options.option_displayer,coverage_amount_mode:"
+msgid "Coverage Amount Mode"
+msgstr "Type du Montant de Couverture"
+
+msgctxt ""
 "field:contract.manage_options.option_displayer,coverage_amount_selection:"
 msgid "Coverage Amount"
 msgstr "Montant de Couverture"
 
-msgctxt "field:contract.manage_options.option_displayer,free_coverage_amount:"
-msgid "Free Coverage Amount"
-msgstr "Montant de couverture libre"
+msgctxt "field:contract.option,coverage_amount_label:"
+msgid "Coverage Amount Label"
+msgstr "Libellé du Montant de Couverture"
 
-msgctxt "field:contract.manage_options.option_displayer,has_coverage_amount:"
-msgid "Has Coverage Amount"
-msgstr "Avec montant de couverture"
+msgctxt "field:contract.option,coverage_amount_mode:"
+msgid "Coverage Amount Mode"
+msgstr "Type du montant de couverture"
 
 msgctxt "field:contract.option,current_coverage_amount:"
 msgid "Coverage Amount"
@@ -26,14 +35,6 @@ msgstr "Montant de Couverture"
 msgctxt "field:contract.option,current_coverage_amount_selection:"
 msgid "Coverage Amount"
 msgstr "Montant de Couverture"
-
-msgctxt "field:contract.option,free_coverage_amount:"
-msgid "Free Coverage Amount"
-msgstr "Montant de couverture libre"
-
-msgctxt "field:contract.option,has_coverage_amount:"
-msgid "Has Coverage Amount"
-msgstr "Avec montant de couverture"
 
 msgctxt "field:contract.option.version,coverage_amount:"
 msgid "Coverage Amount"
@@ -51,6 +52,10 @@ msgctxt "field:contract.option.version,currency_symbol:"
 msgid "Currency Symbol"
 msgstr "Symbole de la Devise"
 
+msgctxt "field:offered.coverage_amount.rule,amount_mode:"
+msgid "Amount Mode"
+msgstr "Type du montant"
+
 msgctxt "field:offered.coverage_amount.rule,coverage:"
 msgid "Coverage"
 msgstr "Garantie"
@@ -67,13 +72,13 @@ msgctxt "field:offered.coverage_amount.rule,create_uid:"
 msgid "Create User"
 msgstr "Créé par"
 
-msgctxt "field:offered.coverage_amount.rule,free_input:"
-msgid "Free Input"
-msgstr "Saisie libre"
-
 msgctxt "field:offered.coverage_amount.rule,id:"
 msgid "ID"
 msgstr "ID"
+
+msgctxt "field:offered.coverage_amount.rule,label:"
+msgid "Label"
+msgstr "Libellé"
 
 msgctxt "field:offered.coverage_amount.rule,rec_name:"
 msgid "Record Name"
@@ -103,13 +108,23 @@ msgctxt "field:offered.option.description,coverage_amount_rules:"
 msgid "Coverage Amount Rules"
 msgstr "Règles de montant de couverture"
 
-msgctxt "help:offered.coverage_amount.rule,free_input:"
+msgctxt "help:offered.coverage_amount.rule,amount_mode:"
 msgid ""
-"If True, the rule must return a boolean to validate the entry, otherwise the"
-" rule must return a list of possible values"
+"If set to free input, the rule must returna boolean to validate the entry, "
+"otherwise the rule must return a list of possible values for selection or "
+"the amount if calculated"
 msgstr ""
-"Si Vrai, la règle doit retourner un booléen pour valider la saisie, "
-"autrement la règle doit retourner une liste de valeurs possibles"
+"En saisie libre la règle retourne un booléen pour valider la saisie, sinon "
+"elle retourne une liste de valeur pour sélection ou une valeur unique pour "
+"un montant calculé"
+
+msgctxt "help:offered.coverage_amount.rule,label:"
+msgid ""
+"This label will be used for the contract option display if the amount is "
+"calculated"
+msgstr ""
+"Ce libellé sera utilisé pour décrire la garantie couverte si le montant est "
+"calculé"
 
 msgctxt "help:offered.coverage_amount.rule,rule:"
 msgid "The rule must return the list of possible coverage amounts"
@@ -175,6 +190,22 @@ msgstr "Montant de couverture maximal"
 msgctxt "model:rule_engine.rule_parameter,string:minimum_coverage_amount"
 msgid "Minimum Coverage Amount"
 msgstr "Montant de couverture minimum"
+
+msgctxt "selection:offered.coverage_amount.rule,amount_mode:"
+msgid "Calculated Amount"
+msgstr "Montant calculé"
+
+msgctxt "selection:offered.coverage_amount.rule,amount_mode:"
+msgid "Free Input"
+msgstr "Saisie libre"
+
+msgctxt "selection:offered.coverage_amount.rule,amount_mode:"
+msgid "Selection"
+msgstr "Sélection"
+
+msgctxt "selection:rule_engine,type_:"
+msgid "Coverage Amount Calculation"
+msgstr "Calcul du montant de couverture"
 
 msgctxt "selection:rule_engine,type_:"
 msgid "Coverage Amount Selection"
