--- a/modules/report_engine/doc/fr/CHANGELOG
+++ b/modules/report_engine/doc/fr/CHANGELOG
@@ -1,3 +1,4 @@
+* BUG#14167 Ajout d'informations sur le document généré dans la sortie de l'API de génération de documents
 * FEA#13775 Ajout d'un API technique pour la génération de documents
 * FEA#13591 Ajout de paramétrage sur les actions par type d'événement pour filtrer sur les objets cibles et non pas d'événement
 * BUG#13140 Correction d'un crash lors de la génération de rapports ayant une pièce jointe avec formattage pour la GED interne
