--- a/modules/offered_eligibility/doc/en/CHANGELOG
+++ b/modules/offered_eligibility/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* OTH#00000 Update simulate API output schema
 * FEA#13716 Extraction of eligibility information in simulation API
 
 Version 2.6 - 2019-10-11
