--- a/modules/distribution/doc/fr/CHANGELOG
+++ b/modules/distribution/doc/fr/CHANGELOG
@@ -1,3 +1,4 @@
+* FEA#12395 Surcharge du réseau de distribution par identité API
 * BUG#13653 Ajout de test pour l'API de réseaux de distribution
 * FEA#13326 Implémentation des API: Mise a jour des reseaux de distribution
 * BUG#13006 Fix des classes API des réseaux de distribution
