contract_insurance_invoice: Move prorata configuration (#3328)
* contract_insurance_invoice: Move prorata configuration

# Fix 13397

* Add missing view

* Update invoice line coverage dates

* Clean up scenario

* Remove code

--- a/modules/contract_insurance_invoice/locale/fr.po
+++ b/modules/contract_insurance_invoice/locale/fr.po
@@ -917,10 +917,6 @@ msgctxt "field:offered.billing_mode-account.fee,xml_id:"
 msgid "XML Id"
 msgstr "Identifiant XML"
 
-msgctxt "field:offered.configuration,prorate_premiums:"
-msgid "Prorate Premiums"
-msgstr "Proratiser les primes"
-
 msgctxt "field:offered.option.description,account_for_billing:"
 msgid "Account for billing"
 msgstr "Compte pour le quittancement"
@@ -949,6 +945,10 @@ msgstr "Règle de Modes de quittancement"
 msgctxt "field:offered.product,days_offset_for_subscription_payments:"
 msgid "Days Offset For Subscription Payments"
 msgstr "Délai en jours pour le paiement des frais à la signature"
+
+msgctxt "field:offered.product,prorate_premiums:"
+msgid "Prorate Premiums"
+msgstr "Proratiser les primes"
 
 msgctxt "field:offered.product,tax_rounding:"
 msgid "Tax_Rounding"
@@ -1169,16 +1169,6 @@ msgctxt "help:offered.billing_mode,name:"
 msgid "The name that will be displayed to the end user"
 msgstr "Nom qui sera affiché à l'utilisateur"
 
-msgctxt "help:offered.configuration,prorate_premiums:"
-msgid ""
-"If checked, the invoiced amount for a given period is the premium prorated "
-"by the period duration if the period is smaller than the frequency. If "
-"unchecked the invoiced amount is the whole premium."
-msgstr ""
-"Si coché, le montant quittancé pour une période donnée est la prime "
-"proratisée par la durée de la période si elle est plus courte que la "
-"fréquence. Si décoché le montant quittancé est la prime entière."
-
 msgctxt "help:offered.option.description,account_for_billing:"
 msgid "Account used to credit premium amount"
 msgstr "Compte comptable utilisé pour créditer le montant de la prime"
@@ -1197,6 +1187,16 @@ msgid "Define which billing mode are available during contract subscription"
 msgstr ""
 "Définir le mode de quittancement disponible lors de la souscription d'un "
 "contrat"
+
+msgctxt "help:offered.product,prorate_premiums:"
+msgid ""
+"If checked, the invoiced amount for a given period is the premium prorated "
+"by the period duration if the period is smaller than the frequency. If "
+"unchecked the invoiced amount is the whole premium."
+msgstr ""
+"Si coché, le montant quittancé pour une période donnée est la prime "
+"proratisée par la durée de la période si elle est plus courte que la "
+"fréquence. Si décoché le montant quittancé est la prime entière."
 
 msgctxt "help:offered.product,taxes_included_in_premium:"
 msgid "Taxes Included In Premium. Requires tax rounding to be set to\"line\""
