--- a/modules/contract_insurance_invoice/doc/fr/CHANGELOG
+++ b/modules/contract_insurance_invoice/doc/fr/CHANGELOG
@@ -1,3 +1,4 @@
+* FEA#13397 Déplacement de la configuration du prorata des primes sur les produits
 * BUG#14231 Correctif du crash lorsque le mode de quittancement est manuel a l'intégration d'un rejet avec représentation à une date
 * OTH#00000 Correction des jours de débit autorisés pour les tests
 * FEA#14026 Ajout d'une option pour ne retourner un résumé que de la première quittance non nulle dans l'API simulate
