--- a/modules/offered_eligibility/doc/fr/CHANGELOG
+++ b/modules/offered_eligibility/doc/fr/CHANGELOG
@@ -1,3 +1,4 @@
+* OTH#00000 Correction d'une typo dans la méthode de vérification d'éligibilité d'une option
 * OTH#00000 Mise à jour du schéma de retour de l'API de simulation
 * BUG#14012 Correction des tests KO
 * FEA#13716 Extraction des informations d'éligibilité dans l'API de simulation
