contract_coverage_amount: Fix rule execution in simulate (#3573)
Fix #13644

--- a/modules/contract_coverage_amount/doc/fr/CHANGELOG
+++ b/modules/contract_coverage_amount/doc/fr/CHANGELOG
@@ -1,3 +1,4 @@
+* OTH#00000 Correction du calcul du montant de couverture dans l'API de simulation
 * FEA#13644 Calcul du montant de couverture et retour dans l'API
 * OTH#00000 Résolution des tests journaliers
 
