--- a/modules/claim_indemnification/doc/fr/CHANGELOG
+++ b/modules/claim_indemnification/doc/fr/CHANGELOG
@@ -1,3 +1,4 @@
+* BUG#14216 Correctif sur la revalorisation qui tombe le dernier jour de la période d'indemnisation: la période n'était pas découpée et la revalorisation n'était pas appliquée
 * BUG#13822 Définit le compte pour les prestations au compte actuel pour les indemnisations
 * FEA#13839 Activation des sous-statuts bloquants pour le statut réouvert
 * OTH#00000 Correctif fonctionnalité 11618
